test/langtools/tools/javac/patterns/T8314632.out
T8314632.java:34:45: compiler.err.pattern.dominated
T8314632.java:42:45: compiler.err.pattern.dominated
T8314632.java:58:29: compiler.err.pattern.dominated
- compiler.note.preview.filename: T8314632.java, DEFAULT
- compiler.note.preview.recompile
3 errors